# cchttpclient

./: .gitignore  CLAUDE.md  README.md  Troubleshooting.md  dynamic_cli_mcp_server.py  pyproject.toml  test_embedding_store.py
.beads/: issues.jsonl
config/: cli_config.json  commands.md  test_error_config.json
docs/: Tasks.md  journal.md  llm-command-generation-prompt.md
src/dynamic_cli/: __init__.py  admin_main.py  admin_server.py  cli.py  config.py  dynamic_cli_mcp_server.py  embedding.py  init_main.py  main.py  markdown_parser.py  mcp_main.py  mcp_server.py  mcp_server_proper.py  scripting.py
static/: admin.html
tests/: test_cli_integration.py
