[project]
name = "dynamic-cli"
version = "0.1.0"
description = "Config-driven HTTP CLI and MCP server"
authors = [{ name = "Example", email = "example@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "numpy>=1.26",
  "openai>=1.0",
  "mcp[cli]"
]

[project.scripts]
dynamic-cli = "dynamic_cli.main:main"
dynamic-cli-admin = "dynamic_cli.admin_main:main"
dynamic-cli-init = "dynamic_cli.init_main:main"
dynamic-cli-mcp = "dynamic_cli.mcp_main:main"

[project.optional-dependencies]
development = [
  "black",
  "isort",
  "mypy",
  "pytest"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
